# prompt-based

./: .dockerignore  .env  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: analyze.md  how-to-run.md  how-to-test.md  prompt.md
docs/seq/: analyze.puml
prompt/prompts/: few-shot.txt
prompt/system/: knowledge_graph.txt
src/application/: services.py
src/controllers/: analyze_controller.py
src/domain/: models.py
src/infrastructure/: ollama_client.py
src/kg_construction/: app.py
src/kg_construction/application/: services.py
src/kg_construction/controllers/: analyze_controller.py
src/kg_construction/domain/: models.py
src/kg_construction/infrastructure/: ollama_client.py  prompt_repository.py
tests/controllers/: test_analyze_controller.py
tests/infrastructure/: test_ollama_client.py
tests/integration/: test_app_requests.py
tests/unit/: test_prompts.py  test_services.py
