[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-construction"
version = "0.1.0"
description = "Prompt-based knowledge graph construction API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.0",
    "python-dotenv==1.0.1",
    "rdflib==7.1.1",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pyright>=1.1.400,<2",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest-runtime"
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".pytest-runtime",
    ".tmp",
    "tests-tmp*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", ".pytest-runtime"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
extraPaths = ["src"]
